<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/login_background"
    >

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/login_textColor"
        android:textColorHint="@color/login_textColor"
        android:hint="@string/email_hint"
        android:textAlignment="center"
        android:textSize="25dp"
        />

    <EditText
        android:id="@+id/password_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:layout_marginTop="32dp"
        android:textColor="@color/login_textColor"
        android:textColorHint="@color/login_textColor"
        android:hint="@string/password_hint"
        android:textAlignment="center"
        android:textSize="25dp"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Remember Me"
        android:textColor="@color/login_textColor"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:id="@+id/remember_me"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:background="@color/login_button_color"
        android:onClick="tapOnLoginButton"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/login_textColor"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:background="@color/sign_up_color"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:onClick="openSignUpScreen"
        android:textColor="@color/login_textColor"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="200dp"
        android:text="@string/forgot_password"
        android:textColor="@color/forgot_password_label"
        />



</LinearLayout>