<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_success_screen"
    tools:context=".LoginSucessScreen">


    <FrameLayout
        android:id="@+id/drawer_frame"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>

    <com.google.android.material.navigation.NavigationView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:id="@+id/navItem"
        android:background="@color/sign_up_color"
        android:layout_gravity = "start"
        app:headerLayout="@layout/navigation_image"
        app:menu="@menu/navigation_item"
        >

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>




